--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,36 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.controls {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.btn {
+  flex: 1 75px;
+}
+
+.deal-btn:hover {
+  border-color: #646cff;
+}
+
+.deal-btn:active {
+  background-color: #646cff;
+}
+
+.replace-btn:not(:disabled) {
+  background-color: #ffc107;
+}
+
+.replace-btn:not(:disabled):active {
+  background-color: #d39e00;
+}
+
+.replace-btn:not(:disabled):hover {
+  border-color: #c69500;
 }
